integrated realtime sensor data

--- a/components/iot-frontend/src/app/app.component.html
+++ b/components/iot-frontend/src/app/app.component.html
@@ -2,8 +2,8 @@
   <ion-split-pane contentId="main-content">
     <ion-menu contentId="main-content" type="overlay">
       <ion-header>
-        <ion-toolbar color="danger">
-          <ion-title>Menu</ion-title>
+        <ion-toolbar color="dark">
+          <ion-title>IoT Dashboard</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
