--- a/components/iot-frontend/src/app/home/home.page.html
+++ b/components/iot-frontend/src/app/home/home.page.html
@@ -1,10 +1,10 @@
 <ion-header>
-  <ion-toolbar color="danger">
+  <ion-toolbar color="dark">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Red Hat Manuela
+      Red Hat ManuELA
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -14,10 +14,10 @@
       <img src="https://www.enactor.co/wp-content/uploads/2016/09/IOT-header.jpg" alt="" />
       <ion-card-header>
         <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Red Hat Manuela</ion-card-title>
+        <ion-card-title>Welcome to Red Hat ManuELA</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
+        <p>MANUfacturing Edge Lightweight Accelerator.</p>
       </ion-card-content>
     </ion-card>
     <!--
