--- a/components/iot-frontend/src/app/list/list.page.html
+++ b/components/iot-frontend/src/app/list/list.page.html
@@ -1,10 +1,10 @@
 <ion-header>
-  <ion-toolbar color="danger">
+  <ion-toolbar color="dark">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Sensor data
+      Live Data
     </ion-title>
   </ion-toolbar>
 </ion-header>
