--- a/components/iot-frontend/src/app/home/home.page.html
+++ b/components/iot-frontend/src/app/home/home.page.html
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content color="light">
     <ion-card class="welcome-card">
       <img src="https://www.enactor.co/wp-content/uploads/2016/09/IOT-header.jpg" alt="" />
       <ion-card-header>
