--- a/components/iot-frontend/src/app/app.component.html
+++ b/components/iot-frontend/src/app/app.component.html
@@ -18,7 +18,7 @@
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
-        <img src="assets/red-hat-logo.png" alt="" />
+        <img src="assets/red-hat-logo.png" alt="" width="200px"/>
       </ion-content>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
